Refix the gallery item hover, it's padding, margins and borders need to not change when hovering to prevent shifting items.

--- a/inkscape/static/css/gallery.css
+++ b/inkscape/static/css/gallery.css
@@ -5,13 +5,12 @@
   min-height: 150px;
   text-align: center;
   vertical-align: middle;
-  margin: 5px 4px 25px 4px;
+  margin: 5px 2px 25px 2px;
+  border: 2px solid white;
 }
 .galleryitem:hover {
   border: 2px solid #cce;
-  padding: 2px;
   background-color: #eef;
-  margin: 5px 4px 25px 4px;
 }
 .galleryitem a.link img,
 .bioitem a.link img {
